# ml-pipeline-debugger

./: .gitignore  DEPLOY.md
ml_pipeline_debugger/: README.md  __init__.py  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
ml_pipeline_debugger/server/: Dockerfile  __init__.py  app.py  ml_pipeline_debugger_environment.py  requirements.txt
ml_pipeline_debugger/server/tasks/: grader_utils.py  task1_hyperparams.py  task2_nan_pipeline.py  task3_silent_underfit.py
modules/module-1/: README.md  notebook.ipynb
modules/module-2/: README.md  notebook.ipynb
modules/module-3/: README.md  notebook.ipynb
modules/module-4/: README.md  notebook.ipynb
modules/module-5/: README.md  notebook.ipynb
